// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R1 — the phone is unchanged (golden) contacts add sheet (header Plus), iOS 390 1`] = `
{
  "lines": 502,
  "sha256": "2eb111be4bc0f3e95c7940a0df48784724b7974f9d60c875497faccf06024f9f",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, iOS 390 1`] = `
{
  "lines": 502,
  "sha256": "d191a253fabbe6c6b530653ace1bfdd3c5260420ed6237e703723dee2b55f83b",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, web 390 1`] = `
{
  "lines": 502,
  "sha256": "d191a253fabbe6c6b530653ace1bfdd3c5260420ed6237e703723dee2b55f83b",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, web 768 1`] = `
{
  "lines": 502,
  "sha256": "d191a253fabbe6c6b530653ace1bfdd3c5260420ed6237e703723dee2b55f83b",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts detail open, iOS 390 1`] = `
{
  "lines": 597,
  "sha256": "2a0063731cc75abee6b58cd0357d936a811642d6fc1bf0c2d1c09f961faf2a8f",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew add sheet (add-crew-member), iOS 390 1`] = `
{
  "lines": 423,
  "sha256": "5348a77ee50518b4ffea3c3d7e629aec4adf4577d583d2ed0210315474e42386",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, iOS 390 1`] = `
{
  "lines": 423,
  "sha256": "ab051828b88da3054888021f70b0a6f5f3f7ab0046efefa87492082896d6fc3d",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, web 390 1`] = `
{
  "lines": 423,
  "sha256": "ab051828b88da3054888021f70b0a6f5f3f7ab0046efefa87492082896d6fc3d",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, web 768 1`] = `
{
  "lines": 423,
  "sha256": "ab051828b88da3054888021f70b0a6f5f3f7ab0046efefa87492082896d6fc3d",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew detail open, iOS 390 1`] = `
{
  "lines": 522,
  "sha256": "64208b36cdd200c627e3be35cdef52d53062efb02d81554dd86076166bdcc22e",
}
`;
